--- a/GraficadorSeñales/MainWindow.xaml
+++ b/GraficadorSeñales/MainWindow.xaml
@@ -64,7 +64,7 @@
         </ComboBox>
         <TextBlock x:Name="lblHertzAlta" FontSize="30" HorizontalAlignment="Left" Margin="24,484,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Text="0 Hz"/>
         <TextBlock x:Name="lblHertzBaja" FontSize="30" HorizontalAlignment="Left" Margin="24,529,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Text="0 Hz"/>
-        <TextBlock x:Name="lblNumero" FontSize="26" HorizontalAlignment="Left" Margin="24,573,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Text="0 Hz"/>
+        <TextBlock x:Name="lblNumero" FontSize="26" HorizontalAlignment="Left" Margin="24,573,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Text="-"/>
 
 
     </Grid>
